CriptoOrg/CriptoOrg/force-app/main/default/objects/Transacao__c/Transacao__c.object-meta.xml
<CustomObject>
    <description>Armazena a transação realizada para um ativo.</description>
    <label>Transação</label>
    <nameField>
        <displayFormat>TRAN-{000000}</displayFormat>
        <label>Número de Transação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transções</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>