CriptoOrg/CriptoOrg/force-app/main/default/objects/Transacao__c/fields/AtivosCarteira__c.field-meta.xml
<CustomField>
    <fullName>AtivosCarteira__c</fullName>
    <description>Relacionamento com o Ativo da Carteira</description>
    <inlineHelpText>Relacionamento com o Ativo da Carteira</inlineHelpText>
    <label>Ativos da Carteira</label>
    <referenceTo>AtivoCarteira__c</referenceTo>
    <relationshipLabel>Transções</relationshipLabel>
    <relationshipName>Transcoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>