CriptoOrg/CriptoOrg/force-app/main/default/objects/Transacao__c/fields/Carteira__c.field-meta.xml
<CustomField>
    <fullName>Carteira__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento de pesquisa entre a transação e a carteira</description>
    <inlineHelpText>Relacionamento de pesquisa entre a transação e a carteira</inlineHelpText>
    <label>Carteira</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Transções</relationshipLabel>
    <relationshipName>TranscoesCarteira</relationshipName>
    <type>Lookup</type>
</CustomField>