CriptoOrg/CriptoOrg/force-app/main/default/objects/Transacao__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <description>Relacionamento entre as transações e ordem</description>
    <label>Ordem</label>
    <referenceTo>Ordem__c</referenceTo>
    <relationshipLabel>Transções</relationshipLabel>
    <relationshipName>TranscoesOrdem</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>