CriptoOrg/CriptoOrg/force-app/main/default/objects/Transacao__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Quantidade total realizado na transação.</description>
    <inlineHelpText>Quantidade total realizado na transação.</inlineHelpText>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>